--- a/index/index.html
+++ b/index/index.html
@@ -75,8 +75,10 @@
                           </button>
                         </span>
                   </td>
-                  <td class="ctx-metadata-input-field pt-3-half" contenteditable="true"></td>
-                  <td class="ctx-metadata-input-field pt-3-half" contenteditable="true"></td>
+                  <td class="ctx-metadata-input-field pt-3-half" contenteditable="true">header-bin</td>
+                  <td class="ctx-metadata-input-field pt-3-half" contenteditable="true">
+                  { "seq":0, "uin":0, "client":{ "platform":0, "os":0, "version":"0", "osVersion":"", "env":"", "clientIP":"", "clientPort":0, "netType":0, "isTourist":0, "adtag":"", "product":0, "vnk":"", "ua":"" }, "isTSTReq":false, "th_openid":"", "th_userid":"", "traceid":"", "ext_data":"", "token":"" }
+                  </td>
                 </tr>
               </tbody>
             </table>
