--- a/index/index.html
+++ b/index/index.html
@@ -77,7 +77,7 @@
                   </td>
                   <td class="ctx-metadata-input-field pt-3-half" contenteditable="true">header-bin</td>
                   <td class="ctx-metadata-input-field pt-3-half" contenteditable="true">
-                  { "seq":0, "uin":0, "client":{ "platform":0, "os":0, "version":"0", "osVersion":"", "env":"", "clientIP":"", "clientPort":0, "netType":0, "isTourist":0, "adtag":"", "product":0, "vnk":"", "ua":"" }, "isTSTReq":false, "th_openid":"", "th_userid":"", "traceid":"", "ext_data":"", "token":"" }
+                  { "seq":0, "uin":0, "client":{ "platform":0, "os":0, "version":"0", "osVersion":"", "env":"", "clientIP":"", "clientPort":0, "netType":0, "isTourist":0, "adtag":"", "product":0, "vnk":"", "ua":"" }, "isTSTReq":false, "th_openid":"", "th_userid":"", "traceid":"", "ext_data":"", "token":"", "tenant_id":"" }
                   </td>
                 </tr>
               </tbody>
